<resources>
    <string name="app_name">App</string>


    <string name="sign_in_to_supercharge_your_salesforce">Sign In to SuperCharge Your SalesForce</string>
    <string name="phone">Phone</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="fieldsure">FieldSure</string>
</resources>
