<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".login.SignInSignUpFragment">

    <ImageView
        android:id="@+id/signIn_SignUp_fragment_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_surelocal_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/signIn_SignUp_fragment_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/fieldsure"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/signIn_SignUp_fragment_logo"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/signIn_SignUp_fragment_logo"
        app:layout_constraintTop_toBottomOf="@+id/signIn_SignUp_fragment_logo" />

    <TextView
        android:id="@+id/signIn_SignUp_fragment_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adamina"
        android:text="@string/sign_in_to_supercharge_your_salesforce"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn_SignUp_fragment_txt"
        app:layout_constraintVertical_bias="0.123" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signIn_SignUp_fragment_inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn_SignUp_fragment_txt2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signIn_SignUp_fragment_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textStyle="bold"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signIn_SignUp_fragment_inputLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn_SignUp_fragment_inputLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signIn_SignUp_fragment_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textStyle="bold"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView

        android:id="@+id/signIn_SignUp_fragment_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/armata"
        android:text="Forgot Password?."
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/signIn_SignUp_fragment_inputLayout1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signIn_SignUp_fragment_inputLayout1"
        app:layout_constraintTop_toBottomOf="@+id/signIn_SignUp_fragment_inputLayout1" />

    <View
        android:id="@+id/signIn_SignUp_fragment_view"
        android:layout_width="138dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="#D4D4E3"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signIn_SignUp_fragment_forgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/signIn_SignUp_fragment_forgotPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signIn_SignUp_fragment_btn_SignUp"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signIn_SignUp_fragment_btn_SignIn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/background"
        android:layout_marginTop="50dp"
        android:textAllCaps="false"
        app:backgroundTint="#E8E8E8"
        app:layout_constraintTop_toBottomOf="@+id/signIn_SignUp_fragment_forgotPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signIn_SignUp_fragment_btn_SignIn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:text="Sign In"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="50dp"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/signIn_SignUp_fragment_btn_SignUp"
        app:layout_constraintTop_toBottomOf="@+id/signIn_SignUp_fragment_forgotPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
